# stcad

./: .gitignore  =0.26.0  =3.10.7  =4.57.1  README.md  code_implementation.ipynb  pyproject.toml  requirements.txt  vessel_anomalies_map.html
docs/: map_reduce.md  preprocessing_results.md
hpc_jobs/: csv2pkl_24.sh  download_24.sh  download_24_jan_feb.sh  grid_cure_fine.sh  pipeline.sh  test_cure_coarse.sh  test_cure_coarse_2.sh  test_cure_coarse_3.sh  test_cure_coarse_4.sh  test_pipeline_prec.sh  train_bert.sh  train_bert_128.sh  train_cure.sh  tune_cure.sh
hpc_jobs/logs/: Output_26892306.out  Output_26892462.err  Output_26892462.out  Output_26892551.err  Output_26892585.out  Output_26914343.err  Output_26914347.err  Output_26914347.out  Output_26962001.out  Output_26962009.out  Output_26966406.err  Output_26966406.out  Output_26966650.err  Output_26966650.out  Output_26966671.err  Output_26966671.out  Output_26966948.err  Output_26966948.out  Output_26977630.err  Output_26977630.out  Output_27033177.err  Output_27033177.out  Output_27033895.err  Output_27033895.out  Output_27034288.err  Output_27034288.out  Output_27034849.err  Output_27034849.out  Output_27035176.err  Output_27035176.out  Output_27035352.err  Output_27035352.out  Output_27035361.err  Output_27035361.out  Output_27035610.err  Output_27035610.out  Output_27035736.err  Output_27035739.err  Output_27035739.out  Output_27035743.err  (+69 more)
info/: code_base.md
models/pretrained_models/: cure_model.npz
models/pretrained_models/pretrained_bert-128/: config.json  rng_state.pth  scaler.pt  scheduler.pt  trainer_state.json
models/pretrained_models/pretrained_bert-256/: config.json  rng_state.pth  scheduler.pt
src/clustering/: algorithms.py  compute_and_save_embeddings.py  eval_clustering.py  hierarchical.py  interactive_plot.py  utils.py
src/preprocessing/: csv2pkl.py  download.py  map_reduce.py  map_reduce_no_parallel.py  preprocessing.py  train_test_split.py  utils.py
src/sequence_modelling/: configs.py  models.py  train_bert.py  utils.py
src/utils/: datasets.py  logging.py  plot.py
(+6 files in other folders)
