[project]
name = "computational-tools-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "joblib>=1.5.2",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "polars>=1.35.1",
    "pyproj>=3.7.2",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.3",
    "torch>=2.9.1",
    "torchinfo>=1.8.0",
    "torchvision>=0.24.1",
    "tqdm>=4.67.1",
    "transformers[torch]>=4.57.1",
    "wandb>=0.23.0",
    "contextily>=1.5.0",
    "hdbscan>=0.8.33",
    "pandas>=2.2.2",
    "folium>=0.17.1",
    "plotly>=6.5.0",
    "umap-learn>=0.5.9.post2",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
